--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,3 +1,18 @@
+:root {
+  --blue: #357edd;
+  --dark-blue: #00449e;
+  --light-blue: #96ccff;
+  --mid-grey: #555;
+  --near-white: #f4f4f4;
+  --input-color: var(--mid-grey);
+  --button-color: var(--near-white);
+  --button-bg-color: var(--blue);
+  --button-hover-color: var(--dark-blue);
+  --button-disabled-color: var(--light-blue);
+  --bright-yellow: #ffda00;
+  --navitem-link-color: var(--bright-yellow);
+}
+
 a {
   color: inherit;
   text-decoration: none;
@@ -44,31 +59,32 @@ a {
   margin-bottom: 10px;
 }
 
-:root {
-  --bright-yellow: #ffda00;
-  --navitem-link-color: var(--bright-yellow);
-}
 .rr-navbar {
   position: relative;
   min-height: 50px;
   border: 1px solid transparent;
 }
+
 .rr-navbar > .rr-nav {
   display: flex;
   margin: 0;
   padding: 0;
   list-style-type: none;
 }
+
 .rr-navbar-item {
   padding: 5px;
 }
+
 .rr-navbar-item > a:hover {
   border-bottom: 2px solid var(--navitem-link-color);
 }
+
 .rr-navbar-item > a.active {
   color: inherit;
   border-bottom: 2px solid var(--navitem-link-color);
 }
+
 .rr-navbar-item + .rr-navbar-item {
   margin-left: 10px;
 }
@@ -99,3 +115,49 @@ a {
 .rr-band-link.active > .rr-pointer {
   display: inline-block;
 }
+
+.rr-new-label {
+  margin-top: 1rem;
+  padding-left: 1rem;
+}
+
+.rr-input {
+  color: var(--input-color);
+  border-style: solid;
+  border-width: 1px;
+  padding: .25rem;
+}
+
+.rr-action-button {
+  color: var(--button-color);
+  background-color: var(--button-bg-color);
+  border-radius: .125rem;
+  padding: .25rem;
+  padding-left: .5rem;
+  padding-right: .5rem;
+}
+
+.rr-action-button:hover {
+    background-color: var(--button-hover-color);
+}
+
+.rr-action-button[disabled] {
+  background-color: var(--button-disabled-color);
+}
+
+.rr-cancel-icon {
+  align-self: center;
+  margin-left: .25rem;
+  background: none;
+  border: none;
+  color: inherit;
+}
+
+.rr-inline-form {
+  display: flex;
+}
+
+.rr-inline-form-group {
+  display: flex;
+  justify-content: space-between;
+} 
