--- a/app/templates/bands.hbs
+++ b/app/templates/bands.hbs
@@ -13,25 +13,30 @@
     </ul>
     <div class="rr-new-label">
         {{#if isAddingBand}}
-            {{input
-                type="text"
-                class="rr-input"
-                value=newBandName
-                placeholder="New band"
-            }}
-            <button
-                type="button"
-                class="rr-action-button"
-                onclick={{action "saveBand"}}
+            <form 
+                class="rr-inline-form"
+                onsubmit={{action "saveBand"}}
             >
-                Add
-            </button>
-            <button
-                class="rr-cancel-icon"
-                onclick={{action "cancelAddBand"}}
-            >
-                {{fa-icon "times"}}
-            </button>
+                {{input
+                    type="text"
+                    class="rr-input"
+                    value=newBandName
+                    placeholder="New band"
+                }}
+                <button
+                    type="submit"
+                    class="rr-action-button"
+                    disabled={{isAddButtonDisabled}}
+                >
+                    Add
+                </button>
+                <button
+                    class="rr-cancel-icon"
+                    onclick={{action "cancelAddBand"}}
+                >
+                    {{fa-icon "times"}}
+                </button>
+            </form>
         {{else}}
             <label onclick={{action "addBand"}}>
                 {{fa-icon "plus"}}
