--- a/app/templates/bands/band/songs.hbs
+++ b/app/templates/bands/band/songs.hbs
@@ -2,9 +2,12 @@
     {{#each model.songs as |song|}}
         <li class="rr-list-item">
             {{song.title}} 
-            <span class="rr-rating fr">
-                {{song.rating}}
-            </span>
+            <StarRating 
+                class="fr" 
+                @rating={{song.rating}} 
+                @item={{song}} 
+                @onClick={{action "updateRating"}}
+            />
         </li>
     {{else}}
         <li>
