--- a/app/templates/bands/band/details.hbs
+++ b/app/templates/bands/band/details.hbs
@@ -1,1 +1,4 @@
-{{outlet}}
+<section class="rr-panel b--solid br1 bw1">
+    <h3>Description</h3>
+    <p class="lh-copy">{{model.description}}</p>
+</section>
