page titles, editing of band description

--- a/app/templates/bands/band/details.hbs
+++ b/app/templates/bands/band/details.hbs
@@ -1,4 +1,15 @@
 <section class="rr-panel b--solid br1 bw1">
+    <button 
+        type="button" 
+        class="rr-action-button fr"
+        onclick={{action "toggleEditing"}}
+    >
+        {{if isEditing "Save" "Edit"}}
+    </button>
     <h3>Description</h3>
-    <p class="lh-copy">{{model.description}}</p>
+    {{#if isEditing}}
+        {{textarea class="rr-textarea" value=model.description}}
+    {{else}}
+        <p class="lh-copy">{{model.description}}</p>
+    {{/if}}
 </section>
