--- a/app/templates/bands/band/details.hbs
+++ b/app/templates/bands/band/details.hbs
@@ -2,7 +2,7 @@
     <button 
         type="button" 
         class="rr-action-button fr"
-        onclick={{action "toggleEditing"}}
+        onclick={{action (if isEditing "save" "edit")}}
     >
         {{if isEditing "Save" "Edit"}}
     </button>
