--- a/app/templates/components/star-rating.hbs
+++ b/app/templates/components/star-rating.hbs
@@ -1,13 +1,14 @@
+{{! template-lint-disable }}
 {{#if hasBlock}}
-    {{yield stars}}
+  {{yield stars}}
 {{else}}
-    {{#each stars as |star|}}
-        <span class="rating-star" onclick={{action "setRating" star.rating}}>
-            {{#if star.isFull}}
-                {{fa-icon "star"}}
-            {{else}}
-                {{fa-icon "star-o"}}
-            {{/if}}
-        </span>
-    {{/each}}
+  {{#each stars as |star|}}
+    <span class="rating-star" onclick={{action "setRating" star.rating}}>
+      {{#if star.isFull}}
+        {{fa-icon "star"}}
+      {{else}}
+        {{fa-icon "star-o"}}
+      {{/if}}
+    </span>
+  {{/each}}
 {{/if}}
