--- a/app/templates/bands/band/songs.hbs
+++ b/app/templates/bands/band/songs.hbs
@@ -1,49 +1,49 @@
 <ul class="rr-list">
-    {{#each model.songs as |song|}}
-        <li class="rr-list-item">
-            {{song.title}} 
-            <StarRating 
-                class="fr" 
-                @rating={{song.rating}} 
-                @onClick={{action "updateRating" song}}
-            />
-        </li>
-    {{else}}
-        <li>
-            No {{model.name}} songs yet. Why don't you <a href='#' onclick={{action "addSong"}}> create one?</a>
-        </li>
-    {{/each}}
+  {{#each model.songs as |song|}}
+    <li class="rr-list-item">
+      {{song.title}} 
+      <StarRating 
+          class="fr" 
+          @rating={{song.rating}} 
+          @onClick={{action "updateRating" song}}
+      />
+    </li>
+  {{else}}
+    <li>
+      No {{model.name}} songs yet. Why don't you <a href="#" onclick={{action "addSong"}}> create one?</a>
+    </li>
+  {{/each}}
 </ul>
 <div class="rr-new-label">
-    {{#if isAddingSong}}
-        <form 
-            class="rr-inline-form"
-            onsubmit={{action "saveSong"}}
-        >
-            {{input
-                type="text"
-                class="rr-input"
-                value=newSongTitle
-                placeholder="New song"
-            }}
-            <button
-                type="submit"
-                class="rr-action-button"
-                disabled={{isAddButtonDisabled}}
-            >
-                Add
-            </button>
-            <button
-                class="rr-cancel-icon"
-                onclick={{action "cancelAddSong"}}
-            >
-                {{fa-icon "times"}}
-            </button>
-        </form>
-    {{else}}
-        <label onclick={{action "addSong"}}>
-            {{fa-icon "plus"}}
-            <span class="ml1">Add new song</span>
-        </label>
-    {{/if}}
+  {{#if isAddingSong}}
+    <form 
+        class="rr-inline-form"
+        onsubmit={{action "saveSong"}}
+    >
+      {{input
+          type="text"
+          class="rr-input"
+          value=newSongTitle
+          placeholder="New song"
+      }}
+      <button
+        type="submit"
+        class="rr-action-button"
+        disabled={{isAddButtonDisabled}}
+      >
+        Add
+      </button>
+      <button
+          class="rr-cancel-icon"
+          onclick={{action "cancelAddSong"}}
+      >
+        {{fa-icon "times"}}
+      </button>
+    </form>
+  {{else}}
+    <label onclick={{action "addSong"}}>
+      {{fa-icon "plus"}}
+      <span class="ml1">Add new song</span>
+    </label>
+  {{/if}}
 </div>
