ember-test-helpers, tests

--- a/app/templates/bands.hbs
+++ b/app/templates/bands.hbs
@@ -1,8 +1,8 @@
 <div class="rr-sidebar">
   <ul class="rr-list">
     {{#each model as |band|}}
-      <li class="rr-list-item">
-        {{#link-to "bands.band" band.id class="rr-band-link"}}
+      <li class="rr-list-item" data-test-rr="band-list-item">
+        {{#link-to "bands.band" band.id class="rr-band-link" data-test-rr="band-link"}}
           {{band.name}}
           <span class="rr-pointer">
             {{fa-icon "angle-right"}}
@@ -19,8 +19,14 @@
           class="rr-input"
           value=newBandName
           placeholder="New band"
+          data-test-rr="new-band-input"
         }}
-        <button type="submit" class="rr-action-button" disabled={{isAddButtonDisabled}}>
+        <button 
+          type="submit" 
+          class="rr-action-button" 
+          disabled={{isAddButtonDisabled}}
+          data-test-rr="new-band-button"
+        >
           Add
         </button>
         <button class="rr-cancel-icon" onclick={{action "cancelAddBand"}}>
@@ -28,7 +34,7 @@
         </button>
       </form>
     {{else}}
-      <label onclick={{action "addBand"}}>
+      <label onclick={{action "addBand"}} data-test-rr="new-band-label">
         {{fa-icon "plus"}}
         <span class="ml1">Add new band</span>
       </label>
