integration test, test helper

--- a/app/templates/components/star-rating.hbs
+++ b/app/templates/components/star-rating.hbs
@@ -3,7 +3,11 @@
   {{yield stars}}
 {{else}}
   {{#each stars as |star|}}
-    <span class="rating-star" onclick={{action "setRating" star.rating}}>
+    <span 
+      class="rating-star" 
+      onclick={{action "setRating" star.rating}}
+      data-test-rr={{concat "star-rating-" star.rating}}
+    >
       {{#if star.isFull}}
         {{fa-icon "star"}}
       {{else}}
