--- a/app/templates/bands/band/songs.hbs
+++ b/app/templates/bands/band/songs.hbs
@@ -1,21 +1,48 @@
 <div class="rr-controls-panel">
+  <div class="rr-search-panel">
+    {{input type="text" class="rr-input" value=searchTerm
+    data-test-rr="search-box"}}
+    <button type="button" class="rr-search-button">
+      {{fa-icon "search"}}
+    </button>
+  </div>
   <div class="rr-sort-panel">
-    <button class="rr-sort-button" data-test-rr="sort-by-rating-desc" onclick={{action (mut sortBy) "ratingDesc"}}>
+
+    {{#link-to 
+      (query-params sort="ratingDesc") 
+      class="rr-sort-button" 
+      data-test-rr="sort-by-rating-desc"
+    }}
       Rating
       {{fa-icon "angle-down"}}
-    </button>
-    <button class="rr-sort-button" data-test-rr="sort-by-rating-asc" onclick={{action (mut sortBy) "ratingAsc"}}>
+    {{/link-to}}
+
+    {{#link-to 
+      (query-params sort="ratingAsc") 
+      class="rr-sort-button" 
+      data-test-rr="sort-by-rating-asc"
+    }}
       Rating
       {{fa-icon "angle-up"}}
-    </button>
-    <button class="rr-sort-button" data-test-rr="sort-by-title-desc" onclick={{action (mut sortBy) "titleDesc"}}>
+    {{/link-to}}
+
+    {{#link-to 
+      (query-params sort="titleDesc") 
+      class="rr-sort-button" 
+      data-test-rr="sort-by-title-desc"
+    }}
       Title
       {{fa-icon "angle-down"}}
-    </button>
-    <button class="rr-sort-button" data-test-rr="sort-by-title-asc" onclick={{action (mut sortBy) "titleAsc"}}>
+    {{/link-to}}
+
+    {{#link-to 
+      (query-params sort="titleAsc") 
+      class="rr-sort-button" 
+      data-test-rr="sort-by-title-asc"
+    }}
       Title
       {{fa-icon "angle-up"}}
-    </button>
+    {{/link-to}}
   </div>
 </div>
 <ul class="rr-list">
