additional capitalize helper work

--- a/app/templates/bands/band/songs.hbs
+++ b/app/templates/bands/band/songs.hbs
@@ -72,7 +72,7 @@
         type="text"
         class="rr-input"
         value=newSongTitle
-        placeholder="New song"
+        placeholder=newSongPlaceholder
         data-test-rr="new-song-form"
       }}
       <button
