--- a/app/templates/bands/index.hbs
+++ b/app/templates/bands/index.hbs
@@ -1,3 +1,7 @@
-<div class="tc">
-  Select a band.
+<div class="tc" data-test-rr="bands-empty-message">
+  {{#if model.length}}
+    Select a band.
+  {{else}}
+    Create a band.
+  {{/if}}
 </div>
