--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -8,6 +8,13 @@
         </small>
       </h1>
     {{/link-to}}
+    {{#if session.isAuthenticated}}
+      <div class="rr-user-panel">
+        <span data-test-rr="user-email">
+          {{session.data.authenticated.userEmail}}
+        </span>
+      </div>
+    {{/if}}
   </div>
   <div class="rr-main-content">
     {{outlet}}
