--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -13,6 +13,9 @@
         <span data-test-rr="user-email">
           {{session.data.authenticated.userEmail}}
         </span>
+        <span>
+          {{link-to "Logout" "logout" data-test-rr="logout"}}
+        </span>
       </div>
     {{/if}}
   </div>
