validation for sign-up and login

--- a/app/templates/sign-up.hbs
+++ b/app/templates/sign-up.hbs
@@ -1,19 +1,58 @@
 <div class="rr-form-container">
+
   <h3>Sign up to R&R</h3>
+  
   <form onsubmit={{action "signUp"}}>
     <div class="rr-form-row-inline">
-      <label for="email">Email</label>
-      {{input type="email" class="rr-input ml-auto" id="email"
-value=email}}
+      {{#if showErrors.email}}
+        <div
+          class="rr-form-field-error" 
+          data-test-rr="email-error"
+        >
+          {{v-get model "email" "message"}}
+        </div>
+      {{/if}}
+      <label for="email">
+        Email
+      </label>
+      {{input 
+        type="email" 
+        class="rr-input ml-auto" 
+        id="email" 
+        value=model.email
+        focus-out=(action (mut showErrors.email) true)
+      }}
     </div>
+
     <div class="rr-form-row-inline">
-      <label for="password">Password</label>
-      {{input type="password" class="rr-input ml-auto" id="password"
-value=password}}
+      {{#if showErrors.password}}
+        <div 
+          class="rr-form-field-error" 
+          data-test-rr="password-error"
+        >
+          {{v-get model "password" "message"}}
+        </div>
+      {{/if}}
+      <label for="password">
+        Password
+      </label>
+      {{input 
+        type="password" 
+        class="rr-input ml-auto" 
+        id="password" 
+        value=model.password
+        focus-out=(action (mut showErrors.password) true)
+      }}
     </div>
+
     <div class="rr-form-footer">
       <div class="rr-button-panel">
-        <button type="submit" class="rr-action-button" data-test-rr="sign-up-button">
+        <button 
+          type="submit" 
+          class="rr-action-button" 
+          disabled={{v-get model "isInvalid"}}
+          data-test-rr="sign-up-button"
+        >
           Sign up
         </button>
       </div>
@@ -23,4 +62,5 @@ value=password}}
       </div>
     </div>
   </form>
+
 </div>
