--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -280,6 +280,20 @@ a {
   justify-content: center;
 }
 
+.rr-cancel-icon-left {
+  align-self: center;
+  margin-right: 0.25rem; /* .mr1 */
+  background: none;
+  border: none;
+  color: inherit;
+}
+
+.rr-form-field-error {
+  width: 100%;
+  margin: 0.25em 0;
+  color: var(--error-color);
+}
+
 @media screen and (min-width: 60em) and (max-width: 100em) {
   .rr-form-container {
     width: 80%;
