server-side validation

--- a/app/templates/sign-up.hbs
+++ b/app/templates/sign-up.hbs
@@ -3,6 +3,13 @@
   <h3>Sign up to R&R</h3>
   
   <form onsubmit={{action "signUp"}}>
+    {{#if baseErrors.length}}
+      {{#each baseErrors as |error|}}
+        <div class="rr-error-message">
+          {{error}}
+        </div>
+      {{/each}}
+    {{/if}}
     <div class="rr-form-row-inline">
       {{#if showErrors.email}}
         <div
