user model update

--- a/app/templates/bands/band/songs.hbs
+++ b/app/templates/bands/band/songs.hbs
@@ -58,7 +58,7 @@
     </li>
   {{else}}
     <li>
-      No {{capitalize model.name}} songs yet. Why don't you <a href="#" onclick={{action "addSong"}}> create one?</a>
+      No {{capitalize model.name}} songs yet
     </li>
   {{/each}}
 </ul>
